--- a/mod_5_frontend/package.json
+++ b/mod_5_frontend/package.json
@@ -8,16 +8,20 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@toast-ui/react-chart": "^1.0.2",
     "bootstrap": "^4.5.2",
+    "canvasjs": "^1.8.3",
     "native-css": "^2.0.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-flippy": "^0.1.5",
+    "react-qr-scanner": "0.0.10",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "tui-chart": "^3.11.2"
   },
   "scripts": {
     "start": "react-scripts start",
